# my-claude-stuff

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/reconcile/: SKILL.md
.github/workflows/: lint.yml  test.yml  typecheck.yml
claude/: CLAUDE.md  settings.json
claude/memory/: MEMORY.md  feedback_bash_quoting.md  feedback_claude_dir_security.md  feedback_dont_optimize_tokens.md  feedback_downstream_impact.md  feedback_no_auto_commit.md  feedback_no_speculation.md  feedback_resolved_pr_comments.md  feedback_rigor.md  feedback_subagent_execution.md  feedback_use_allowlist.md  feedback_write_new_tests.md  user_environment.md  user_license.md  user_pronouns.md
claude/skills/commit/: skill.md
claude/skills/fix/: skill.md
claude/skills/summarize-transcript/: SKILL.md
docs/: block-commands-design.md  block-commands-research.md  blocked-commands-reference.md  gws-cli-blocking.md  hooks.md
docs/blocking-alternatives/: README.md
docs/blocking-alternatives/docs/: blocking-alternatives.md  citations.md
scripts/: backfill_prior_cost.py  block_commands.py  block_paths.py  config.py  discover_gws_help.py  memory_sync.py  notify.py  prompt_log.py  reconcile.py  session_tracker.py  statusline.py
scripts/explore/: color_samples.py  extract_gws_commands.py
specs/001-repo-organization/: spec.md
specs/001-repo-organization/checklists/: requirements.md
tests/: conftest.py  test_block_commands.py  test_block_paths.py  test_memory_sync.py  test_notify.py  test_prompt_log.py  test_reconcile.py  test_session_tracker.py  test_statusline.py
(+7 files in other folders)
